--- a/OrdersDashboard/wwwroot/index.html
+++ b/OrdersDashboard/wwwroot/index.html
@@ -14,6 +14,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
